--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+    <div class="title">counter-app</div>
+    <div class="count-number"></div>
+    <div class="button-wrapper">
+        <button class="incerement-btn">+</button>
+        <button class="decrement-btn">-</button>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 
